# hdu2025_deep_learning

./: .gitattributes  .gitignore  1-knn.ipynb  README.md  hello.ipynb  main.py  pyproject.toml
1-knn/: 1-knn.ipynb  1-knn.typ  bib.bib
2-mlp/: 2-mlp.ipynb  2-mlp.typ  bib.bib
3-musegan/: 3-musegan-eval.py  3-musegan-explore.ipynb  3-musegan-train.py  3-musegan.ipynb
3-musegan/musegan/: LICENSE-MIT  README.md  __init__.py
3-musegan/musegan/dataset/: __init__.py  data_utils.py
3-musegan/musegan/model/: __init__.py  bar_generator.py  critic.py  generator.py  temporal.py  utils.py
3-musegan/musegan/train/: __init__.py  criterion.py  trainer.py
3-musegan/output/: train.csv  train.txt
3-musegan/report/final/: 3-musegan.typ  bib.bib
3-musegan/report/final/scripts/: plot_train.py  transform.py
3-musegan/report/methodology/: 3-musegan-methodology.typ  bib.bib
3-musegan/report/methodology/assets/: bar-gen.drawio  critic.drawio  d-outline.drawio  g-outline.drawio  gan-outline.drawio  temporal-net.drawio
3-musegan/report/opening/: 3-musegan-opening.typ  bib.bib
3-musegan/scripts/: prepare_data.py
dataset/musegan/: train_x_lpd_5_phr.npz
template/hdu-report-typst/template/: fonts.typ
