[project]
name = "hdu2025-deep-learning"
version = "0.1.0"
description = "Course work for HDU (2025-2026-1)-B050156s-07 \"Deep learning\""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
