[project]
name = "hdu2025-deep-learning"
version = "0.1.0"
description = "Course work for HDU (2025-2026-1)-B050156s-07 \"Deep learning\""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipympl>=0.9.7",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
